Fixed social icon visibility

--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -99,7 +99,6 @@
       .social-icon {
         margin: 0;
         height: 2.2em;
-        opacity: 0.8;
         border-radius: 0;
         transition: transform 100ms;
         color: $text-color;
